--- a/Ex10/app/src/main/res/values/strings.xml
+++ b/Ex10/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Intent_ BroadcastReceiver</string>
+    <string name="app_name">Ex10</string>
 </resources>
